# pydsstools

./: pyproject.toml  requirements.txt  test.py
.devcontainer/: Dockerfile  devcontainer.json
pydsstools/src/: pyproject.toml  setup.py
