[tool.poetry]
name = "pydsstools"
version = "2.3.1"
description = "Python library to read-write HEC-DSS database file"
readme = "README.md"
authors = ["Gyan Basyal <gyanBasyalz@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
heclib-c = { path = "./pydsstools/src" }

[tool.poetry.dev-dependencies]

sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }